# projeto_crud_frontend_backend

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  database.py  main.py  requirements.txt  router.py  schemas.py
